--- a/tssc-admin/admin-entity/pom.xml
+++ b/tssc-admin/admin-entity/pom.xml
@@ -28,6 +28,11 @@
             <version>1.16.22</version>
         </dependency>
         <dependency>
+            <groupId>com.yz</groupId>
+            <artifactId>tssc-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
